# guess-flags

./: .gitignore  README.md  docker-compose.yml  en.json  flags.csv  flags280925.csv  generate_en_i18n.py  package-lock.json  package.json  ru.json  start_project.bat  translate_to_ru.py
client/: Dockerfile  index.html  (+4 more)
server/: .gitignore  Dockerfile  __main__.py  config_reader.py  entrypoint.sh  flags.csv  main.py  pyproject.toml  requirements.txt  run_cron.py  sample.env  updated.csv
server/api/: __init__.py  casual.py  casual_game.py  casual_tournament.py  common.py  create_game.py  create_training_game.py  cronjobs.py  match.py  payment.py  results.py  season.py  tournament.py  training_game.py  training_results.py  users.py  utils.py
server/bot/handlers/: __init__.py  admin.py  common.py  payment.py
server/bot/keyboards/: __init__.py  builders.py
server/bot/middlewares/: admin.py
server/db/: __init__.py  createEntries.py
server/db/migrations/models/: 10_20250613164251_None.py  10_20250707121631_None.py  13_20250707144330_None.py  15_20250707203437_None.py  17_20250709105959_None.py  18_20250712120607_None.py  21_20250712181402_None.py  24_20250714100008_None.py  27_20250719162205_None.py  2_20250614134756_None.py  34_20250722193350_None.py  37_20250729121655_None.py  3_20250615195137_None.py  43_20250906162732_None.py  44_20250911185403_None.py  46_20251013150312_None.py  8_20250623153015_None.py  9_20250701120156_None.py
server/db/models/: achievement.py  casual.py  flag.py  match.py  season.py  tournament.py  user.py
server/locales/: messages.pot
(+88 files in other folders)
